tests/baselines/reference/interfacedeclWithPredicatesObjectError4.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesObjectError4.ts(14,5): error TS2322: Type '{ user_id: string; text: string; }' is not assignable to type 'UsersShow'.
  Predicates of interface UsersShow are not satisfied
    Predicate type(user_id) == number was not satisfied in type { user_id: string; text: string; }
      Types of property 'user_id' are incompatible.


==== tests/cases/compiler/interfacedeclWithPredicatesObjectError4.ts (1 errors) ====
    interface UsersShow{
        user_id?: any;
        screen_name?: any;
        text: any;
    } with {
        or(and(present(user_id), not(present(screen_name))),
        and(present(screen_name), not(present(user_id))));
        type(user_id) == number;
        type(screen_name) == string;
        type(text) == string;
        present(text);
    }
    
    let object: UsersShow = {user_id: "25", text: "text"}
        ~~~~~~
!!! error TS2322: Type '{ user_id: string; text: string; }' is not assignable to type 'UsersShow'.
!!! error TS2322:   Predicates of interface UsersShow are not satisfied
!!! error TS2322:     Predicate type(user_id) == number was not satisfied in type { user_id: string; text: string; }
!!! error TS2322:       Types of property 'user_id' are incompatible.